Second Recipe Finished

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="Vegetarian_Pad_Thai.html">Vegetarian Pad Thai</a></li>
             <li>
-                <a></a>
+                <a href="Vegetarian_Skillet_Lasagna.html">Vegetarian Skillet Lasagna</a>
             </li>
             <li>
                 <a></a>
