--- a/odin-recipes/Vegetarian_Pad_Thai.html
+++ b/odin-recipes/Vegetarian_Pad_Thai.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Vegetarian Pad Thai Recipe</h1>
+    <img src="https://th.bing.com/th/id/OIP.feCBhxm5ovC2JDXkoriO0wHaE7?pid=ImgDet&rs=1" alt="Plate of Vegetarian Pad Thai">
     <h2><strong>Ingredients</strong></h2>
     <h3>
         <ul>
