Third Recipe Finished

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -17,7 +17,7 @@
                 <a href="Vegetarian_Skillet_Lasagna.html">Vegetarian Skillet Lasagna</a>
             </li>
             <li>
-                <a></a>
+                <a href="Cool_Beans_Salad.html">Cool Beans Salad</a>
             </li>
         </ul>
 
